--- a/css/styles.css
+++ b/css/styles.css
@@ -132,26 +132,55 @@ p {
 }
 
 .address .link {
-    /* display: block; */
+    display: inline-flex;
+    align-items: center;
     font-style: normal;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--main-text);
+    fill: var(--main-text);
+    gap: 8px;
 }
+
+.address .icon{
+    width: 24px;
+    height: 24px;
+    /* content: ""; */
+    /* margin-right: 12px; */
+    /* background-color: green; */
+   
+}
+/* .address .icon{ 
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    
+    fill: var(--main-text);
+} */
+
+
 
 .menu .link:hover,
 .menu .link:focus,
 .address .link:hover,
 .address .link:focus {
     color: var(--press-state);
+    fill: var(--press-state);
 }
 
 /* ======= /HEADER ======= */
 
 /* ======= HERO ======= */
 .hero {
-    background: #2E2F42;
+    /* max-width: 1440px; */
+    background-color: #2E2F42;
+    background-image: 
+        linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+        url(../images/hero.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: auto auto;
     text-align: center;
     padding-top: 188px;
     padding-bottom: 188px;
@@ -198,7 +227,7 @@ p {
 }
 
 .principle .title,
-.team .list .title,
+.team.list .title,
 .project-list h2 {
     margin-bottom: 8px;
     font-weight: 500;
@@ -216,8 +245,41 @@ p {
 
 .principle .item {
     width: calc((100% - 72px) / 4);
+}
 
-    /* outline: 1px solid green; */
+/* .principle .icon{
+    height: 112px;
+    background-color: var(--light);
+    border-radius: 4px;
+    
+}
+.principle svg{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} */
+
+.principle .item::before{
+    content: '';
+    display: block;
+    height: 112px;
+    margin-bottom: 8px;
+    background-color: var(--light);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 64px;
+}
+.principle .item:nth-child(1):before{
+    background-image: url(../images/sprite.svg#ico-radar);
+}
+.principle .item:nth-child(2):before{
+    background-image: url(../images/sprite.svg#ico-clock);
+}
+.principle .item:nth-child(3):before{
+    background-image: url(../images/sprite.svg#ico-diagram);
+}
+.principle .item:nth-child(4):before{
+    background-image: url(../images/sprite.svg#ico-astronaut);
 }
 
 /* ======= /PRINCIPLE ======= */
@@ -231,7 +293,8 @@ p {
 .activities .container {}
 
 .activities .title,
-.team .title {
+.teams .title,
+.customers .title {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.11;
@@ -254,27 +317,74 @@ p {
 /* ======= /ACTIVITIES ======= */
 
 /* ======= TEAM ======= */
-.team {
+.teams {
     background-color: var(--light);
 }
 
-.team .list {
+.team.list {
     display: flex;
     gap: 24px;
     text-align: center;
 }
 
-.team .item {
+.team> .item {
     width: calc((100% - 72px) / 4);
     padding-bottom: 32px;
     background-color: #ffffff;
 }
 
-.team .item img {
+.team> .item img {
     margin-bottom: 32px;
+}
+.team .base-text{
+    margin-bottom: 8px;
+}
+
+.sociales{
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+}
+.sociales .link{
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    padding: 12px;
+    background-color: var(--pri-brand);
+    border: none;
+    border-radius: 50%;
+    fill: var(--light);
+}
+.sociales .link:hover, .sociales .link:focus{
+    background-color: var(--press-state);
+}
+
+.sociales .icon{
+    width: 16px;
+    height: 16px;
 }
 
 /* ======= /TEAM ======= */
+
+/* ======= CUSTOMERS ======= */
+.customers .list{
+    /* width: 168px;
+    height: 88px; */
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+}
+.customers .link{
+    display: inline-block;
+     padding: 16px 32px;
+    border: 1px solid var(--subtle-text);
+    border-radius: 4px;
+}
+.customers .icon{
+    width: 104px;
+    height: 56px;
+   
+}
 
 /* ======= FOOTER ======= */
 .footer {
@@ -283,7 +393,9 @@ p {
     padding-bottom: 100px;
 }
 
-.footer .container {}
+.footer .container {
+    display: flex;
+}
 
 .footer .logo {
     display: block;
@@ -296,6 +408,32 @@ p {
 
 .footer .slogan {
     width: 264px;
+}
+.footer .social{
+    margin-left: 120px;
+}
+
+.footer .social p{
+    margin-bottom: 16px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+
+.footer .sociales{
+    gap: 16px;
+}
+.footer .sociales .icon{
+    width: 24px;
+    height: 24px;
+}
+.footer .sociales .link{
+    padding: 8px;
+    background-color: rgba(255,255,255,0.1);
+}
+.footer .sociales .link:hover, .footer .sociales .link:focus{
+    background-color: var(--success);
 }
 
 /* ----=  Portfolio =---- */
