--- a/css/styles.css
+++ b/css/styles.css
@@ -144,12 +144,8 @@ p {
 }
 
 .address .icon{
-    width: 24px;
-    height: 24px;
-    /* content: ""; */
-    /* margin-right: 12px; */
-    /* background-color: green; */
-   
+    width: 18px;
+    height: 18px;
 }
 /* .address .icon{ 
     display: inline-block;
@@ -173,7 +169,9 @@ p {
 
 /* ======= HERO ======= */
 .hero {
-    /* max-width: 1440px; */
+    max-width: 1440px;
+    margin-left: auto;
+    margin-right: auto;
     background-color: #2E2F42;
     background-image: 
         linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
@@ -466,6 +464,7 @@ p {
 .radio-btn:focus {
     color: #ffffff;
     background-color: var(--press-state);
+    border-color: var(--press-state);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
@@ -486,6 +485,9 @@ p {
     border: 1px solid var(--accent);
     border-top: none;
 }
-.project:hover{
+.project .link{
+    display: inline-block;
+}
+.project .link:hover{
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
